--- a/app/scheduler/scheduler.html
+++ b/app/scheduler/scheduler.html
@@ -4,9 +4,9 @@
 
         <div layout="horizontal" flex>
 
-            <div flex layout="vertical" layout-padding style="padding-right: 0px;">
+            <div id="schedule-blocks-view" flex layout="vertical" layout-padding style="padding-right: 0px; max-height: 816px;">
 
-                <div layout="vertical" class="schedule-draft-data-list">
+                <div layout="vertical" class="schedule-draft-data-list" id="schedulerDraftView">
                     <md-toolbar class="panel-toolbar panel-toolbar-small">
                         <div class="md-toolbar-tools">
                             <span>Schedule Drafts</span>
@@ -65,7 +65,12 @@
                     </md-list>
                 </div>
 
-                <div layout="vertical" class="md-whiteframe-z1 schedule-block-list" style="margin-top: 10px; height: 375px;">
+                <div id="schedule-horizontal-draft-resizer"
+                     resizer="horizontal"
+                     resizer-target="#schedule-draft-data-list-id">
+                </div>
+
+                <div flex id="scheduleCurrentView" layout="vertical" class="md-whiteframe-z1 schedule-block-list">
                     <md-toolbar class="panel-toolbar panel-toolbar-small">
                         <div class="md-toolbar-tools">
                             <span>Schedule Observations</span>
@@ -120,7 +125,7 @@
                 </div>
             </div>
 
-            <div style="margin-top: 8px; margin-bottom: 8px; margin-right: 8px;" layout="vertical">
+            <div style="margin-top: 8px; margin-bottom: 8px; margin-right: 8px;" layout="vertical" id="schedulerScriptView">
                 <md-toolbar style="margin-left: 24px;  width: 511px;" class="panel-toolbar panel-toolbar-small">
                     <div class="md-toolbar-tools">
                         <span>Schedule Block Details</span>
