--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <script src="bower_components/jquery-ui/ui/jquery.ui.sortable.js"></script>
 
 <!-- JS from Bower Components -->
-<script src="bower_components/less.js/dist/less-1.6.2.js" data-concat="false"></script>
+<script src="bower_components/less.js/dist/less.min.js" data-concat="false"></script>
 
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/underscore/underscore.js"></script>
